--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://monorail.proxy.rlwy.net:49523/railway
+spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:40857/railway
 spring.datasource.username=postgres
-spring.datasource.password=DaBcee1*E32eg4eG4*B6EDC6Da1dA5Aa
+spring.datasource.password=ebc*eBc6ED6eGc342Ab2A1E*AdccAc*a
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
