--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://roundhouse.proxy.rlwy.net:40857/railway
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:30479/railway
 spring.datasource.username=postgres
-spring.datasource.password=ebc*eBc6ED6eGc342Ab2A1E*AdccAc*a
+spring.datasource.password=f*4C13g-5-2gB1B3-f6aBa3F5aeAbBaA
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
